Bug 106748 - FILEOPEN: Opening this .docx file freezes LO
Summary: FILEOPEN: Opening this .docx file freezes LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0
Keywords: perf
Depends on:
Blocks:
 
Reported: 2017-03-24 13:35 UTC by Frederic Parrenin
Modified: 2017-03-28 19:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
the document (5.19 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-03-24 16:39 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frederic Parrenin 2017-03-24 13:35:57 UTC
Steps to reproduce:
- open the following .docx file
https://mycore.core-cloud.net/public.php?service=files&t=9e918b56fe6e066d98159409eb184321
=> LO freezes
Comment 1 Xisco Faulí 2017-03-24 16:38:50 UTC
Reproduced in ( LibreOffice freezes when scrolling )

- Version: 5.4.0.0.alpha0+
Build ID: 1670cc25bc2771e87f7956a4b0dd634abaa4128b
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

- Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

- Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

but not in

- LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 2 Xisco Faulí 2017-03-24 16:39:40 UTC
Created attachment 132128 [details]
the document
Comment 3 Caolán McNamara 2017-03-27 20:40:27 UTC
There is a tremendously long polygon edge which is dashed, which triggers one of the super slow dashing cases
Comment 4 Caolán McNamara 2017-03-27 20:43:30 UTC
https://gerrit.libreoffice.org/#/c/35781/ is my stab at it
Comment 5 Commit Notification 2017-03-28 15:39:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b3545786dafcf2293168fea894b4a61ae64b52f3

Resolves: tdf#106748 infinite dashed line from annotations to FAR_AWAY things

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.