Resolves: tdf#106748 infinite dashed line from annotations to FAR_AWAY things

we (very irritatingly) create dashed lines by creating a sequence
of dash drawing layer objects, so if its hugely long we create a hugely
long sequence

Change-Id: I38a0c6052cf058d5e02ebef7dd6a90e27f6e5454
Reviewed-on: https://gerrit.libreoffice.org/35781
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>